--- a/app/src/main/res/layout/showrecipe.xml
+++ b/app/src/main/res/layout/showrecipe.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
-
-
+              android:layout_height="match_parent" android:weightSum="1">
     <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/listView"/>
+    <Button
             android:layout_width="wrap_content"
-            android:layout_height="87dp"
-            android:id="@+id/listView" android:layout_gravity="center_vertical"/>
-</LinearLayout>
+            android:layout_height="wrap_content"
+            android:text="Add"
+            android:id="@+id/button01" android:layout_gravity="top" android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Submit"
+            android:id="@+id/button02" android:layout_gravity="bottom"
+            android:layout_alignParentBottom="true" android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"/>
+
+</RelativeLayout>
