--- a/app/src/main/res/layout/showrecipe_list_item.xml
+++ b/app/src/main/res/layout/showrecipe_list_item.xml
@@ -20,6 +20,15 @@
 
 
             />
+    <TextView
+            android:id="@+id/textview03"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="dateTime"
+            android:textSize="20dip"
+
+
+            />
     <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
