--- a/app/src/main/res/layout/showrecipe_list_item.xml
+++ b/app/src/main/res/layout/showrecipe_list_item.xml
@@ -29,10 +29,10 @@
 
 
             />
-    <Spinner
+    <!--<Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/spinner" android:layout_weight="1"/>
+            android:id="@+id/spinner" android:layout_weight="1"/> -->
 
 
 </LinearLayout>
