--- a/app/src/main/res/layout/reimburse.xml
+++ b/app/src/main/res/layout/reimburse.xml
@@ -3,6 +3,7 @@
               android:layout_width="match_parent"
               android:orientation="vertical"
               android:layout_marginTop="30dp"
+
               android:layout_height="match_parent" android:weightSum="1">
     <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                     android:layout_weight="0.20" android:layout_marginLeft="30dp">
@@ -19,6 +20,8 @@
                 android:layout_alignBottom="@id/textview01"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="FFFFFF"
+
 
                 android:id="@+id/editText01" android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"/>
