--- a/app/src/main/res/layout/showreceipt.xml
+++ b/app/src/main/res/layout/showreceipt.xml
@@ -5,18 +5,18 @@
     <ListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/listView"/>
+            android:id="@+id/list_receipts"/>
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Add"
-            android:id="@+id/button01" android:layout_gravity="top" android:layout_alignParentBottom="true"
+            android:id="@+id/button_addReceipt" android:layout_gravity="top" android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Submit"
-            android:id="@+id/button02" android:layout_gravity="bottom"
+            android:id="@+id/button_submitReceipts" android:layout_gravity="bottom"
             android:layout_alignParentBottom="true" android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"/>
 
