--- a/app/src/main/res/layout/showrecipe_list_item.xml
+++ b/app/src/main/res/layout/showrecipe_list_item.xml
@@ -2,33 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/receipt_pic"/>
     <TextView
-            android:id="@+id/textview01"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="dateTime"
-            android:textSize="20dip"
-
-
-            />
+        android:id="@+id/receipt_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="dateTime"
+        android:textSize="20dip"
+        android:layout_marginLeft="10dip"/>
     <TextView
-            android:id="@+id/textview02"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="dateTime"
-            android:textSize="20dip"
-
-
-            />
+        android:id="@+id/receipt_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="dateTime"
+        android:textSize="20dip"
+        android:layout_gravity="center"
+        android:layout_marginLeft="10dip"/>
     <TextView
-            android:id="@+id/textview03"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="dateTime"
-            android:textSize="20dip"
-
-
-            />
+        android:id="@+id/receipt_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="dateTime"
+        android:textSize="20dip"
+        android:layout_gravity="center"
+        android:layout_marginLeft="10dip"/>
     <!--<Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
