--- a/app/src/main/res/layout/showreceipt_list_item.xml
+++ b/app/src/main/res/layout/showreceipt_list_item.xml
@@ -3,31 +3,34 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_margin="5px"
+        android:scaleType="fitXY"
         android:id="@+id/receipt_pic"/>
     <TextView
         android:id="@+id/receipt_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:layout_gravity="center"
-        android:text="dateTime"
-        android:textSize="20dip"
+        android:textSize="20sp"
         android:layout_marginLeft="10dip"/>
     <TextView
         android:id="@+id/receipt_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="dateTime"
-        android:textSize="20dip"
+        android:layout_weight="1"
+        android:textSize="20sp"
         android:layout_gravity="center"
         android:layout_marginLeft="10dip"/>
     <TextView
         android:id="@+id/receipt_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="dateTime"
-        android:textSize="20dip"
+        android:layout_weight="1"
+        android:textSize="20sp"
         android:layout_gravity="center"
         android:layout_marginLeft="10dip"/>
     <!--<Spinner
